--- a/styles/styles.css
+++ b/styles/styles.css
@@ -341,4 +341,25 @@ body{
         grid-template-columns: repeat(1, 1fr);
         gap: 14px;
     }
+    /* Footer styles */
+    .footer{
+        background-color: #01ACFD;
+        color: white;
+        font-family: 'Quicksand', sans-serif;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        padding: 60px 16px;
+    }
+    .footer-nav{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        gap: 10px;
+        padding: 32px 0px;
+    }
+    .footer-description{
+        font-size: 1rem;
+        max-width: 330px;
+    }
 }
