--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,15 @@
     margin: 0px;
    }
 /* Shared Styles */
+.marq{
+    font-family: 'Quicksand', sans-serif;
+    padding: 20px 0px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: white;
+    font-weight: bold;
+    background-color: orange;
+}
 .display-flex{
     display: flex;
 }
